# web-chess

./: Cargo.toml  README.md  notworking.js
src/: main.rs
static/: index.html
